--- a/src/OrbitCore.CatalogService/OrbitCore.CatalogService.csproj
+++ b/src/OrbitCore.CatalogService/OrbitCore.CatalogService.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -8,13 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="FastEndpoints" Version="5.29.0" />
+    <PackageReference Include="FastEndpoints.ClientGen" Version="5.29.0" />
     <PackageReference Include="FastEndpoints.Swagger" Version="5.29.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Application\" />
     <Folder Include="Infrastructure\" />
     <Folder Include="Repositories\" />
   </ItemGroup>
-
 </Project>
