--- a/src/OrbitCore.CatalogService/appsettings.json
+++ b/src/OrbitCore.CatalogService/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DynamoDBConfig": {
+    "Region": "us-west-1", // Substitua pela região apropriada
+    "ServiceURL": "http://localhost:4566" // Para uso local com LocalStack ou DynamoDB Local
+  }
 }
