--- a/src/OrbitCore.CatalogService/OrbitCore.CatalogService.csproj
+++ b/src/OrbitCore.CatalogService/OrbitCore.CatalogService.csproj
@@ -7,8 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Amazon.Lambda.AspNetCoreServer.Hosting" Version="1.7.1" />
+    <PackageReference Include="Amazon.Lambda.Core" Version="2.3.0" />
+    <PackageReference Include="AWSSDK.Core" Version="3.7.400.16" />
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.400.13" />
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.301" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.402.7" />
     <PackageReference Include="FastEndpoints" Version="5.29.0" />
     <PackageReference Include="FastEndpoints.ClientGen" Version="5.29.0" />
     <PackageReference Include="FastEndpoints.Swagger" Version="5.29.0" />
