Configuração do DynamoDB para funcionar diretamente na AWS

--- a/src/OrbitCore.CatalogService/appsettings.json
+++ b/src/OrbitCore.CatalogService/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "DynamoDBConfig": {
-    "Region": "us-west-1", // Substitua pela região apropriada
-    "ServiceURL": "http://localhost:4566" // Para uso local com LocalStack ou DynamoDB Local
+    "Region": "us-east-1"
   }
 }
