--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy .NET 8 Application
+name: Build, Test, and Deploy .NET 8 Application
 
 on:
   push:
@@ -9,38 +9,59 @@ on:
       - main
 
 jobs:
+  # Job 1: Build
   build:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout do código do repositório
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Configura o .NET 8
       - name: Set up .NET
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '8.x'
 
-      # Restaura as dependências
       - name: Restore dependencies
         run: dotnet restore src/OrbitCore.CatalogService/OrbitCore.CatalogService.csproj
 
-      # Faz o build da aplicação
       - name: Build
         run: dotnet build src/OrbitCore.CatalogService/OrbitCore.CatalogService.csproj --configuration Release
 
-      # Executa os testes
+  # Job 2: Test
+  test:
+    runs-on: ubuntu-latest
+    needs: build  # Este job depende do job de build ser concluído com sucesso
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '8.x'
+
       - name: Run tests
         run: dotnet test src/OrbitCore.CatalogService.Tests/OrbitCore.CatalogService.Tests.csproj --configuration Release
 
-      # Deploy apenas quando for push na branch main
+  # Job 3: Deploy
+  deploy:
+    runs-on: ubuntu-latest
+    needs: test  # Este job depende do job de test ser concluído com sucesso
+
+    if: github.ref == 'refs/heads/main'  # Garante que só roda na branch main
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up AWS CLI
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
       - name: Deploy to AWS Lambda
-        if: github.ref == 'refs/heads/main'  # Garante que só roda na branch main
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}   # Configura as credenciais AWS
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: us-east-1   # Defina sua região
-        run:
-         sam deploy --code-only --no-confirm-changeset
+        run: sam deploy --code-only --no-confirm-changeset
